# my2centsai-blog-samples

./: .gitignore  README.md
aws-devops-agent-demo/: README.md
aws-devops-agent-demo/app/: handler.py
aws-devops-agent-demo/chaos/: capacity-starvation.sh  restore.sh
aws-devops-agent-demo/cloudformation/: stack.yaml
aws-devops-agent-demo/scripts/: cleanup.sh  deploy.sh  test-api.sh
aws-security-agent-demo/: README.md
aws-security-agent-demo/scripts/: seed-module-2.sh
bedrock-agentcore-code-interpreter-cli/: .gitignore  LICENSE  go.mod
bedrock-agentcore-otel-pydantic/: .env.example  README.md  main.py  requirements.txt
bedrock-agentcore-registry-demo/: README.md  requirements.txt
bedrock-agentcore-registry-demo/scripts/: approval-workflow.sh  cleanup.sh  create-registry.sh  discovery.sh  register-resources.sh  register-url-sync.sh  search_registry.py
claude-code-skills-agentcore-code-interpreter/: Makefile  README.md  go.mod  go.sum
claude-managed-agents-self-hosted-sandboxes/: README.md  wrangler.jsonc.snippet
claude-managed-agents-self-hosted-sandboxes/patches/: 01-bump-base-image.patch  02-trust-egress-ca.patch
claude-managed-agents-self-hosted-sandboxes/samples/: README.md
temporal-scheduling-quickstart/: .env.example  Makefile  README.md  docker-compose.yml  pyproject.toml
temporal-scheduling-quickstart/src/: activities.py  config.py  storage.py  targets.py  worker.py  workflows.py
temporal-scheduling-quickstart/src/schedules/: backfill.py  create_cron.py  create_interval.py  delete_all.py  list_describe.py  pause_trigger.py
(+18 files in other folders)
