[project]
name = "temporal-scheduling-quickstart"
version = "0.1.0"
description = "Companion code for the my2cents.ai post on Temporal scheduling in Python on macOS."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "temporalio>=1.27.0",
    "httpx>=0.28.0",
    "aiosqlite>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
